@@ -125,11 +125,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) mod_session: Always decode session attributes early.
-     trunk patch: http://svn.apache.org/r1850947
-     2.4.x patch: svn merge -c 1850947 ^/httpd/httpd/trunk .
-     +1: hwibell, covener, wrowe
-
   *) mod_ssl (ssl_engine_io.c: bio_filter_out_write, bio_filter_in_read)
      Clear retry flags before aborting on client-initiated reneg. [Joe Orton]
      PR: 63052
